--- a/lib/wordlex_web/templates/layout/root.html.heex
+++ b/lib/wordlex_web/templates/layout/root.html.heex
@@ -25,6 +25,7 @@
         </a>
       </section>
     </header>
+    <h2 class="text-red-500">AAA</h2>
     <%= @inner_content %>
   </body>
 </html>
